orbit alignment fixed